--- a/WindowsClient/css/style.css
+++ b/WindowsClient/css/style.css
@@ -1249,6 +1249,7 @@ body .service-center-BH-Mac ul .connect-custumers {
   align-items: center;
 }
 body .service-center-BH-Mac ul .connect-custumers h3 {
+  width: 100%;
   font-size: 14px;
   color: #FFFFFF;
   letter-spacing: 0.88px;
@@ -1258,6 +1259,7 @@ body .service-center-BH-Mac ul .connect-custumers a {
   font-size: 12px;
   color: #FFFFFF;
   letter-spacing: 0.75px;
+  display: block;
   width: 90px;
   height: 30px;
   line-height: 30px;
@@ -1274,6 +1276,7 @@ body .service-center-BH-Mac ul .connect-custumers .consult-time {
   letter-spacing: 0.75px;
 }
 body .service-center-BH-Mac ul .connect-custumers p {
+  width: 100%;
   font-size: 12px;
   color: #94A9BA;
   letter-spacing: 0;
